Remove normalize dependency

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@ $app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
 body {
   font-family: sans-serif;
   background: #eee;
+  margin: 0;
 }
 
 a:link {
