Add saves drawer and dialog

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -108,6 +108,14 @@ mat-card.search {
 	width: 100%;
 }
 
+.float-right {
+	float: right;
+}
+
+.float-left {
+	float: left;
+}
+
 mat-icon {
 	vertical-align: middle;
 }
